0-3_AI_Evaluation_Engine/설계문서_V7.0/V30/instructions/3_evaluate/cat09_responsiveness.md
# Category 09: Responsiveness (대응성) - 평가 지침서 V30

---

## 1. 카테고리 정의

### 한글 정의
시민의 요구와 민원에 신속하게 대응하는 능력

### 영문 정의
The ability to respond promptly to citizens' demands and complaints

### 학술 근거
- **Vigoda (2002)**: 행정 대응성의 구성 요소
- **Putnam (1993)**: 민주주의와 시민 대응성
- **Bryer (2007)**: 관료제의 대응성 이론


## 2. V30 평가 방식 - 풀링 평가

### 평가 대상 데이터

```
100개 풀링 데이터 (3개 AI가 수집한 전체 데이터)

┌──────────────────────────────────────┐
│ Gemini    수집: 60개                 │
│ Perplexity 수집: 30개                │
│ Grok       수집: 10개                │
├──────────────────────────────────────┤
│ 풀링 합계: 100개                     │
└──────────────────────────────────────┘

4개 평가 AI (Claude, ChatGPT, Gemini, Grok)가
각각 100개 전체 데이터를 독립적으로 평가

⚠️ Perplexity = 평가 제외 (수집만 담당)
```

### 평가 독립성

```
타이밍 분리 = 객관성 보장

[수집 단계]
→ Gemini, Perplexity, Grok이 데이터 수집
→ collected_data_v30 테이블에 저장

[평가 단계] - 다른 세션, 다른 시점
→ Claude, ChatGPT, Gemini, Grok이 평가
→ 수집 시점 ≠ 평가 시점
→ 독립적 판단 = 더 객관적
```

---

## 3. 평가 범위 - 구체적 10개 항목 기준

### 🎯 대응성 = 📞 민원/요구/피드백 대응!

⚠️ **아래 10개 항목을 기준으로 평가하세요.**

### ✅ [O] 대응성 평가 기준 10개 항목

| # | 항목명 | 설명 |
|---|--------|------|
| 9-1 | **주민참여예산 규모** | 참여예산 금액 |
| 9-2 | **정보공개 처리 기간** | 평균 처리 일수 |
| 9-3 | **주민 제안 반영** | 반영 건수/비율 |
| 9-4 | **지역 현안 대응** | 현장 점검, 대책 발표 건수 |
| 9-5 | **재난 대응 실적** | 재난 현장 대응 평가 |
| 9-6 | **위기 대응 보도** | 위기 대응, 재난 대응 보도 |
| 9-7 | **현장 방문 보도** | 현장 방문 키워드 보도 |
| 9-8 | **민원 처리 만족도** | 민원 처리 만족도 조사 |
| 9-9 | **대응 속도 관련 보도** | 대응 속도 키워드 보도 |
| 9-10 | **현장 대응 관련 보도** | 재난 시 현장 대응 보도 |

💡 **이 10개 항목 외의 내용은 다른 카테고리입니다!**

### ❌ [X] 대응성 아님 - 다른 카테고리

```
❌ 위기 상황 대응 → 위기대응 (7)
❌ 일반 소통 → 소통능력 (8)
❌ 공익 활동 → 공익성 (10)
❌ 법안 발의 → 리더십 (2)
```

---

## 4. 등급 체계 (+4 ~ -4) - V30

**숫자 기반 명확한 기준**

| 등급 | 점수(×2) | 객관적 기준 |
|------|----------|-------------|
| **+4** | +8 | 탁월 - 신속하고 효과적인 대응, 재난 상황 즉각 대응 |
| **+3** | +6 | 우수 - 민원 처리 우수, 시민 요구 적극 반영 |
| **+2** | +4 | 양호 - 기본적인 대응 능력, 민원 처리 양호 |
| **+1** | +2 | 경미한 긍정 - 평균 수준의 대응, 기본적 대응 |
| **0** | 0 | 중립 - 긍정/부정 판단 불가, 정보 부족 또는 중립적 |
| **-1** | -2 | 경미한 부정 - 대응 지연 사례, 민원 처리 불만 |
| **-2** | -4 | 일반 부정 - 대응 능력 문제, 민원 방치 사례 |
| **-3** | -6 | 심각한 부정 - 심각한 대응 미흡, 재난 시 부재 |
| **-4** | -8 | 최악 - 대응 거부 수준, 민원 완전 방치 |

---

## 5. 등급 판단 세부 기준

### +4등급 (탁월함)
- 신속하고 효과적인 대응
- 민원 처리 만족도 최상
- 재난 상황 즉각 대응
- 현장 중심 활동

### +3등급 (우수함)
- 민원 처리 우수
- 시민 요구 적극 반영
- 긴급 상황 효과적 대응
- 후속 조치 철저

### +2등급 (양호함)
- 기본적인 대응 능력
- 민원 처리 양호
- 큰 문제 없음
- 적정 수준의 대응

### +1등급 (경미한 긍정)
- 평균 수준의 대응
- 특별한 문제 없음
- 무난한 민원 처리
- 기본적 대응

### -1등급 (경미한 부정)
- 대응 지연 사례 있음
- 민원 처리 불만
- 현장 대응 미흡
- 개선 필요

### -2등급 (일반 부정)
- 대응 능력 문제
- 민원 방치 사례
- 늑장 대응 비판
- 시민 불만 다수

### -3등급 (심각한 부정)
- 심각한 대응 미흡
- 재난 시 부재
- 민원 무시
- 다수의 비판

### -4등급 (최악)
- 대응 거부 수준
- 민원 완전 방치
- 위기 상황 방관
- 정치인 부적합

---

## 6. 평가 프로세스

### 입력 데이터
```
100개 풀링 데이터 (대응성 카테고리)
- Gemini 수집: 60개
- Perplexity 수집: 30개
- Grok 수집: 10개
```

### 평가 방법
1. **100개 풀링 데이터 전체 검토**
2. **각 데이터별 등급(+4 ~ -4) 부여**
3. **rating 필드에 숫자 문자열 기록 (예: "+3", "-2")**

### 평가 독립성
- 수집 AI와 평가 AI는 시점이 분리됨
- 각 평가 AI는 독립적으로 100개 전체 평가
- 자신이 수집한 데이터도 객관적으로 재평가

---

## 7. V30 기간 제한

### OFFICIAL 데이터: 최근 4년
```
유효 기간: 2022-01-14 ~ 2026-01-14
```

### PUBLIC 데이터: 최근 2년
```
유효 기간: 2024-01-14 ~ 2026-01-14
```

---

## 8. 주의사항 (Pitfalls)

1. **권한 범위**: 해당 정치인 권한 내 사안인지 확인
2. **응답 vs 해결**: 답변만 한 것과 실제 해결 구분
3. **우선순위 맥락**: 민원 긴급성/중요성 맥락
4. **제도적 한계**: 법적/제도적 한계로 대응 불가 경우

---

## 9. JSON 출력 형식

```json
{
  "items": [
    {
      "item_num": 1,
      "data_title": "간결한 제목",
      "data_content": "구체적 내용",
      "data_source": "출처명",
      "source_url": "https://...",
      "source_type": "OFFICIAL",
      "data_date": "2025-06-15",
      "rating": "+2"
    }
  ]
}
```

**핵심: rating 필드에 +4 ~ -4 숫자 문자열 기록!**
**예시: "+4", "+3", "+2", "+1", "-1", "-2", "-3", "-4"**

---

## 10. 체크리스트

- [ ] 100개 풀링 데이터 전체 평가
- [ ] 각 데이터에 rating(+4 ~ -4) 부여
- [ ] 등급 기준에 따른 일관된 평가
- [ ] 권한 범위 내 사안 확인
- [ ] 응답 vs 해결 구분
- [ ] rating은 숫자 문자열 (예: "+3", "-2")

---

**V30 대응성 평가 지침서 끝**
